objects/Behaviour_Score__c.object
<CustomObject>
    <description>This object tracks Customer&apos;s behavior score for the Last 6 month (import from Excel by BIU)</description>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIS__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BScore</relationshipLabel>
        <relationshipName>Behaviour_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HL__c</fullName>
        <label>HL</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME_Score__c</fullName>
        <label>SME Score</label>
        <picklist>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BScore</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BScore</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>